# Studio_Sync_Edit

.github/workflows/: blank.yml
beatsync-studio/: ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
beatsync-studio/src/: App.tsx
beatsync-studio/src-tauri/: Cargo.toml  tauri.conf.json
beatsync-studio/src-tauri/capabilities/: default.json
beatsync-studio/src-tauri/src/: lib.rs  main.rs
beatsync-studio/src-tauri/src/ai/: mod.rs
beatsync-studio/src-tauri/src/audio/: mod.rs  onset.rs  structure.rs  tempo.rs
beatsync-studio/src-tauri/src/autoedit/: engine.rs  mod.rs  styles.rs
beatsync-studio/src-tauri/src/commands/: analysis.rs  autoedit_cmd.rs  export_cmd.rs  media_cmd.rs  mod.rs  project.rs  timeline.rs
beatsync-studio/src-tauri/src/db/: mod.rs
beatsync-studio/src-tauri/src/export/: mod.rs
beatsync-studio/src-tauri/src/media/: ffmpeg.rs  mod.rs
beatsync-studio/src-tauri/src/video/: highlights.rs  mod.rs
beatsync-studio/src/api/: backend.ts
beatsync-studio/src/modules/export/: ExportDialog.tsx
beatsync-studio/src/modules/media/: AiPanel.tsx  MediaLibrary.tsx
beatsync-studio/src/modules/preview/: Preview.tsx
beatsync-studio/src/modules/project/: ProjectManager.tsx
beatsync-studio/src/modules/timeline/: Timeline.tsx
beatsync-studio/src/state/: store.ts
beatsync-studio/src/styles/: global.css
