[package]
name = "beatsync-studio"
version = "0.1.0"
description = "AI BeatSync Studio - Professional offline AI video editor"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rustfft = "6"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[lib]
name = "beatsync_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
strip = true
